--- a/AtlasCoffee/build.gradle
+++ b/AtlasCoffee/build.gradle
@@ -8,3 +8,15 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                groupId = 'com.github.xplor-jason'
+                artifactId = 'xyx.cloudcoffee.notes'
+                version = '1.0'
+            }
+        }
+    }
+}
